# investment-edge

./: .gitignore  README.md  pdf_financial_extractor.py  requirements.txt
adobe-api/: .gitignore  README.md  adobe-credentials.example.json  pyproject.toml  requirements.txt
adobe-api/scripts/: get_access_token.py  main.py  run_all.py
adobe-api/src/adobe_api/: __init__.py  auth.py
adobe-api/src/adobe_api_auth_scaffold.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/investor_report_parser/: __init__.py  cli.py  config.py  excel_exporter.py  models.py  number_parser.py  pdftotext_reader.py  statement_parser.py
