[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adobe-api-auth-scaffold"
version = "0.1.0"
description = "Small helper for Adobe IMS server-to-server authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32,<3",
  "PyPDF2>=3.0",
  "openpyxl>=3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]